--- a/package.json
+++ b/package.json
@@ -7,7 +7,16 @@
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --no-cache --passWithNoTests",
+    "test:ignore-types": "cross-env TS_NODE_TRANSPILE_ONLY=1 jest --passWithNoTests",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint --ext .ts src/",
+    "lint:fix": "eslint --ext .ts src/ --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "check-types": "tsc --noEmit",
+    "validate": "npm run lint && npm run check-types && npm run test",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -38,6 +47,24 @@
     "typescript": "^5.4.2"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.8"
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.27.0",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.29.1",
+    "@typescript-eslint/parser": "^8.29.1",
+    "babel-jest": "^29.7.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.5.1",
+    "prettier": "^3.5.3",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.2"
   }
 }
