--- a/package.json
+++ b/package.json
@@ -43,8 +43,11 @@
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
