--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "check-types": "tsc --noEmit",
     "validate": "npm run lint && npm run check-types && npm run test",
-    "prepare": "husky install"
+    "prepare": "node -e \"if(process.env.HUSKY !== '0') require('husky').install()\""
   },
   "keywords": [],
   "author": "",
